# statgis-1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  examples.md  index.md  make.bat  requirements.txt
docs/examples/: landsat_functions.ipynb  sentinel_functions.ipynb
src/statgis/: __init__.py
src/statgis/gee/: __init__.py  classification.py  landsat_functions.py  river_analysis.py  sample.py  sentinel_functions.py  shoreline_analysis.py  terrain_analysis.py  time_series_analysis.py  utils.py  zonal_statistics.py
src/statgis/gee/classification/: coverage.py
src/statgis/gee/riveranalysis/: plume.py
src/statgis/gee/shorelineanalysis/: shoreline.py
src/statgis/gee/terrainanalysis/: elevation.py
src/statgis/statutils/: __init__.py  plots.py  stats.py
src/statgis/topography/: __init__.py  basic_fields.py  clean_and_filter.py  coordinate_monitoring.py
tests/: test_statgis.py
tests/gee/: test_landsat_functions.py  test_sample.py  test_sentinel_functions.py  test_time_series_analysis.py  test_zonal_statistics.py
