[tool.poetry]
name = "statgis"
version = "1.0.0"
description = "Tools for improve work with geospatial data in Python"
authors = ["Sebástian Narváez-Salcedo, Brayan Navarro-Londoño"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
