[tool.poetry]
name = "statgis"
version = "1.0.0"
description = "Tools for improve work with geospatial data in Python"
authors = ["Sebástian Narváez-Salcedo", "Brayan Navarro-Londoño"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
earthengine-api = ">=0.1.336"
pandas = ">=1.5.3"
scipy = ">=1.10.0"
matplotlib = ">=3.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
ipython = ">=8.8.0"
pytest-cov = ">=4.0.0"
jupyterlab = ">=3.5.2"
ipykernel = ">=6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
